log
Thu Mar 17 12:45:31 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e938a1e
Thu Mar 17 12:49:28 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e78a2d5
Thu Mar 17 12:49:55 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
04ff23c
Thu Mar 17 12:50:08 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8f46263
Thu Mar 17 12:51:37 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ca9447a
Thu Mar 17 12:51:53 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
036e97a
Thu Mar 17 12:51:55 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7302fc5
Thu Mar 17 12:52:35 HSP 2022: 
 tests:  0|6
total_score: 0/70
157d216
Thu Mar 17 12:53:48 HSP 2022: 
 list.c | 57 ++++++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 40 insertions(+), 17 deletions(-)
 tests:  1|5
total_score: 10/70
7b4fee9
Thu Mar 17 13:48:08 HSP 2022: 
 list.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  1|2
   [ INFO ] Insertando 99 a la lista (pushfront)
e916efd
Thu Mar 17 13:48:40 HSP 2022: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  1|5
total_score: 10/70
bffc690
Thu Mar 17 13:49:50 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6e0281f
Thu Mar 17 13:50:51 HSP 2022: 
 list.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  1|5
total_score: 10/70
ffafb1f
Thu Mar 17 13:52:51 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f3732e1
Thu Mar 17 13:55:30 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
02dd757
Thu Mar 17 13:56:21 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:46:16: error: 'list' is a pointer; did you mean to use '->'?
     return list.current->data;
                ^
                ->
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
24e4f5b
Thu Mar 17 13:56:29 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a3ed7fa
Thu Mar 17 13:58:38 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8b0b87f
Thu Mar 17 15:03:47 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
744a060
